noinst_LIBRARIES=libLabSound.a

CXXFLAGS += -std=c++11

INCLUDES= \
    -I../src \
    -I../include \
    -I../third_party \
    -I../third_party/libnyquist/include 

libLabSound_a_SOURCES= \
    ../src/core/AnalyserNode.cpp \
    ../src/core/AudioBasicInspectorNode.cpp \
    ../src/core/AudioBasicProcessorNode.cpp \
    ../src/core/AudioBuffer.cpp \
    ../src/core/AudioBufferSourceNode.cpp \
    ../src/core/AudioContext.cpp \
    ../src/core/AudioDestinationNode.cpp \
    ../src/core/AudioHardwareSourceNode.cpp \ 
    ../src/core/AudioNode.cpp \
    ../src/core/AudioNodeInput.cpp \
    ../src/core/AudioNodeOutput.cpp \
    ../src/core/AudioParam.cpp \
    ../src/core/AudioParamTimeline.cpp \
    ../src/core/AudioScheduledSourceNode.cpp \
    ../src/core/AudioSummingJunction.cpp \
    ../src/core/BiquadFilterNode.cpp \
    ../src/core/ChannelMergerNode.cpp \
    ../src/core/ChannelSplitterNode.cpp \
    ../src/core/ConvolverNode.cpp \
    ../src/core/DefaultAudioDestinationNode.cpp \
    ../src/core/DelayNode.cpp \
    ../src/core/DynamicsCompressorNode.cpp \
    ../src/core/GainNode.cpp \
    ../src/core/OfflineAudioDestinationNode.cpp \
    ../src/core/OscillatorNode.cpp \
    ../src/core/PannerNode.cpp \
    ../src/core/RealtimeAnalyser.cpp \
    ../src/core/StereoPannerNode.cpp \
    ../src/core/WaveShaperNode.cpp \
    ../src/core/WaveTable.cpp \
    ../src/extended/ADSRNode.cpp \
    ../src/extended/ClipNode.cpp  \
    ../src/extended/DiodeNode.cpp \
    ../src/extended/FunctionNode.cpp \
    ../src/extended/LabSound.cpp \
    ../src/extended/NoiseNode.cpp \
    ../src/extended/PdNode.cpp \
    ../src/extended/PeakCompNode.cpp \
    ../src/extended/PowerMonitorNode.cpp \
    ../src/extended/PWMNode.cpp \
    ../src/extended/RecorderNode.cpp \
    ../src/extended/SampledInstrumentNode.cpp \
    ../src/extended/SfxrNode.cpp \
    ../src/extended/SoundBuffer.cpp \
    ../src/extended/SpatializationNode.cpp \
    ../src/extended/SpectralMonitorNode.cpp \
    ../src/extended/SupersawNode.cpp \
    ../src/internal/src/AudioBus.cpp \
    ../src/internal/src/AudioChannel.cpp \
    ../src/internal/src/AudioDSPKernel.cpp \
    ../src/internal/src/AudioDSPKernelProcessor.cpp \
    ../src/internal/src/AudioFileReader.cpp \
    ../src/internal/src/AudioResampler.cpp \
    ../src/internal/src/AudioResamplerKernel.cpp \
    ../src/internal/src/AudioUtilities.cpp \
    ../src/internal/src/Biquad.cpp \
    ../src/internal/src/BiquadDSPKernel.cpp \
    ../src/internal/src/BiquadProcessor.cpp \
    ../src/internal/src/Cone.cpp \
    ../src/internal/src/DelayDSPKernel.cpp \
    ../src/internal/src/DelayProcessor.cpp \
    ../src/internal/src/DirectConvolver.cpp \
    ../src/internal/src/Distance.cpp \
    ../src/internal/src/DynamicsCompressor.cpp \
    ../src/internal/src/DynamicsCompressorKernel.cpp \
    ../src/internal/src/EqualPowerPanner.cpp \
    ../src/internal/src/FFTConvolver.cpp \
    ../src/internal/src/FFTFrame.cpp \
    ../src/internal/src/FFTFrameKissFFT.cpp \
    ../src/internal/src/HRTFDatabase.cpp \
    ../src/internal/src/HRTFDatabaseLoader.cpp \
    ../src/internal/src/HRTFElevation.cpp \
    ../src/internal/src/HRTFKernel.cpp \
    ../src/internal/src/HRTFPanner.cpp \
    ../src/internal/src/MultiChannelResampler.cpp \
    ../src/internal/src/ReverbAccumulationBuffer.cpp \
    ../src/internal/src/ReverbConvolver.cpp \
    ../src/internal/src/ReverbConvolverStage.cpp \
    ../src/internal/src/Reverb.cpp \
    ../src/internal/src/ReverbInputBuffer.cpp \
    ../src/internal/src/SincResampler.cpp \
    ../src/internal/src/VectorMath.cpp \
    ../src/internal/src/WaveShaperDSPKernel.cpp \
    ../src/internal/src/WaveShaperProcessor.cpp \
    ../src/internal/src/ZeroPole.cpp



